# aqua-cheque

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  FLOW.md  Makefile  README.md  cheque.aqua.json  complete_flow.md  deploy-components.md  docker-compose.yml  foundry.toml  package-lock.json  package.json  quick_run.sh  remappings.txt  rustfmt.toml  triggers.md  wavs-cli.toml  wavs.toml  what-is-covered-so-far.md
.github/workflows/: changelog_reminder.yml  contracts.yml  e2e.yml  rust.yml  wavs-image-version-verifier.yml
app/: Cargo.toml
app/src/: main.rs
check-wasm-api/: Cargo.toml
check-wasm-api/src/: lib.rs  models.rs
checks-contract/contracts/: Cheque.sol  MyContract.sol
checks-contract/migrations/: 2_deploy_contracts.js
cheque-app/: interact.md  package-lock.json  package.json  tsconfig.json
cheque-app/src/: accounts.txt  bankCheque.ts  cheque-cli.ts  cheque.json  chequeAbi.ts  chequeCashout.ts  chequeManager.ts  contractsAbi.ts  model.ts  signCheque.ts  triggerAbi.ts
components/aqua-cheque/: Cargo.toml
components/aqua-cheque/src/: lib.rs  lib_2.rs  models.rs  trigger.rs  trigger_2.rs
components/eth-price-oracle/: Cargo.toml
components/eth-price-oracle/src/: api_checks.rs  bindings.rs  lib.rs  models.rs  trigger.rs
components/eth-trigger-echo/: Cargo.toml
components/eth-trigger-echo/src/: bindings.rs  lib.rs
components/eth-trigger-weather/: Cargo.toml
components/eth-trigger-weather/src/: bindings.rs  lib.rs  trigger.rs
components/payout-cheque/: Cargo.toml
components/payout-cheque/src/: lib.rs  models.rs  payout_service.rs  trigger.rs
components/verify-cheque/: Cargo.toml
components/verify-cheque/src/: api_client.rs  lib.rs  models.rs  trigger.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: addressupgradeable.rs  checkpointsupgradeable.rs  contextupgradeable.rs  ecdsaservicemanagerbase.rs  ecdsastakeregistry.rs  ecdsastakeregistryeventsanderrors.rs  ecdsastakeregistrystorage.rs  ecdsaupgradeable.rs  iavsdirectory.rs  idelegationmanager.rs  ierc1271upgradeable.rs  ierc165.rs  ierc20.rs  ierc721.rs  ierc721enumerable.rs  ierc721metadata.rs  ierc721tokenreceiver.rs  ilayerservicehandler.rs  ilayerservicemanager.rs  ilayertrigger.rs  initializable.rs  iregistry.rs  irewardscoordinator.rs  iservicehandler.rs  iservicemanager.rs  iservicemanagerui.rs  isignatureutils.rs  isimplesubmit.rs  isimpletrigger.rs  istakeregistry.rs  istrategy.rs  layerservicemanager.rs  lib.rs  math.rs  mathupgradeable.rs  mockerc20.rs  mockerc721.rs  ownableupgradeable.rs  panic.rs  safecast.rs  (+10 more)
docs/: benefits.mdx  how-it-works.mdx  index.mdx  overview.mdx
docs/guides/: get-started.mdx  operator.mdx  query-from-a-component.mdx  tests.mdx
docs/tutorial/: 1-overview.mdx  2-setup.mdx  3-project.mdx  4-component.mdx  5-build.mdx  6-run-service.mdx  7-prediction.mdx
script/: Common.s.sol  Deploy.s.sol  ShowResult.s.sol  Trigger.s.sol  WavsServiceManager.s.sol  WavsSubmit.s.sol
src/: WavsServiceManager.sol  WavsSubmit.sol  WavsTrigger.sol
src/contracts/: Cheque.sol  ChequeWavsTrigger.sol  PayoutTrigger.sol  VerificationTrigger.sol  WavsTrigger.sol
src/interfaces/: ICheque.sol  ISimpleSubmit.sol  ISimpleTrigger.sol  ITypes.sol  IWAVSServiceHandler.sol
test/: WavsTrigger.t.sol
test/unit/: ChequeTrigger.t.sol
tools/: upgrade.sh
