[workspace]
members = [
    "app",
    "crates/bindings",
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"


[workspace.dependencies]
bindings = { path = "crates/bindings" }

# WASI
wit-bindgen-rt = {version = "0.38.0", features = ["bitflags"]}
wit-bindgen = "0.38.0"
wstd = "0.5.0"
wasi = "0.13.3"
wavs-wasi-chain = "0.3.0-alpha3"

# Other
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.90"
async-trait = "0.1.85"
cfg-if = "1.0.0"
cosmwasm-std = {version = "2.2.0", features = ["stargate"]}
layer-climb = "0.3.7"
tendermint = { version = "0.40.1", default-features = false}
tendermint-rpc = "0.40.1"
tower-service = "0.3.3"
url = "2.5.3"
wasmtime-wasi = { version = "24.0.0", default-features = true }
futures-utils-wasm = "0.1.0"

## Alloy
# must match the crates/bindings/Cargo.toml & app/Cargo.toml value
alloy = { version = "0.11.0", features = ["full", "signer-mnemonic", "node-bindings"] }
alloy-contract = "0.9.2"
alloy-sol-macro = { version = "0.8.15", features = ["json"]}
alloy-primitives = {version = "0.8.20", features = ["serde"]}
alloy-sol-types = "0.8.20"
alloy-json-rpc = "0.11.0"
alloy-provider = "0.11.0"
alloy-transport-http = "0.11.0"
alloy-transport = "0.11.0"
alloy-rpc-client = "0.11.0"
