[workspace]
members = [
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = {version = "0.38.0", features = ["bitflags"]}
wit-bindgen = "0.38.0"
wstd = "0.5.0"
wasi = "0.13.3"
wavs-wasi-chain = "0.3.0-alpha4"

# Other
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.90"

## Alloy
alloy-sol-macro = { version = "0.8.15", features = ["json"]}
alloy-sol-types = "0.8.20"