[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings.workspace = true
# must match the crates/bindings/Cargo.toml value
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "v0.9.2", features = ["sol-types", "contract"] }
eyre = "0.6"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
