[package]
name = "check-wasm-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# WASI
wit-bindgen-rt = {version = "0.39.0", features = ["bitflags"]}
wit-bindgen = "0.39.0"
wstd = "0.5.1"
wasi = "0.14.1"
wavs-wasi-chain = "0.3.0"
tokio = { version = "1", features = ["full"] }
# Other
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"