[package]
name = "eth-price-oracle"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }
wasi = "0.14.1"
wit-bindgen = "0.39.0"
# tokio = { version = "1", features = ["full"] }
wavs-wasi-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
# wasi-http = { workspace = true }       # Use the version from your workspace

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:eth-price-oracle"
target = "wavs:worker/layer-trigger-world@0.3.0"

