[package]
name = "eth-trigger-echo"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:eth-trigger-echo"

[package.metadata.component.target]
path = "../../lib/WAVS/wit"
world = "eth-trigger-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
