[package]
name = "eth-trigger-weather"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }
layer-wasi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
reqwest = {version = "0.12.12"}

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:eth-trigger-weather"

[package.metadata.component.target]
path = "../../lib/WAVS/wit"
world = "eth-trigger-world"

[package.metadata.component.target.dependencies]
"wasi:io" = "=0.2.0"
"wasi:clocks" = "=0.2.0"
"wasi:http" = "=0.2.0"
"wasi:random" = "=0.2.0"
